Comment out twitter code for now

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8" />
 	<title>Since Spurs Last Won A Trophy</title>
 	<meta name="description" content="It's been a while...  #SinceSpursLastWonATrophy">
-	<link rel="icon" 
-      type="image/png" 
+	<link rel="icon"
+      type="image/png"
       href="/assets/img/favicon.png">
 	<!-- Our CSS stylesheet file -->
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" />
@@ -18,7 +18,7 @@
 	#container { width:1100px; margin:0px auto; position:relative;}
 	#share {float:right; padding-right:45px;}
 	#cont {float:left; padding-left:10px;}
-	#headline {height:70px;} 
+	#headline {height:70px;}
 	#right {float:left; width:16opx; height:600px; position:relative; top:0px; padding-left:20px;}
 	#logo {float:left;}
 	#left {float:left; width:300px; height:250px; padding:10px}
@@ -31,11 +31,11 @@
 	h4 {font-size:20px; color:#fff; text-align:center}
 	p {font-size:12px; color:#fff; text-align:center}
 
-	
+
 	</style>
 <meta property="og:title" content="Since Spurs Last Won A Trophy" />
-<meta property="og:site_name" content="Since Spurs Last Won A Trophy" />	
-	
+<meta property="og:site_name" content="Since Spurs Last Won A Trophy" />
+
 	<script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "d2ffcd85-dd02-43ec-9c1d-3d57533a8a7e", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
@@ -65,7 +65,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-<div id ="twitter">
+<!-- <div id ="twitter">
 <h2>What have you achieved in that time?</h2>
 <h4>Tweet #SinceSpursLastWonATrophy</h4><br>
 
@@ -80,7 +80,7 @@
 <div id=contact>
 <p>Feel free to contact us at <b>SinceSpursLastWonATrophy@yahoo.com</b></p>
 </div>
-</div>
+</div> -->
 <div id="right">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Since right -->
