Use https links for open sans and jquery
And delete twitter code, sharing buttons and ads because they are all
poorly done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       type="image/png"
       href="/assets/img/favicon.png">
 	<!-- Our CSS stylesheet file -->
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" />
 	<link href="assets/css/styles.css" rel="stylesheet" />
 	<link href="assets/countup/jquery.countup.css" rel="stylesheet" /><!--[if lt IE 9]>
           <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -36,68 +36,15 @@
 <meta property="og:title" content="Since Spurs Last Won A Trophy" />
 <meta property="og:site_name" content="Since Spurs Last Won A Trophy" />
 
-	<script type="text/javascript">var switchTo5x=true;</script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "d2ffcd85-dd02-43ec-9c1d-3d57533a8a7e", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-
-
-
 
 </head>
 <body>
 <div id="container">
-<div id="share">
-<span class='st_reddit_hcount' displayText='Reddit'></span>
-<span class='st_facebook_hcount' displayText='Facebook'></span>
-<span class='st_twitter_hcount' displayText='Tweet'></span>
-</div>
 <div id="content">
 <div id="countcont"><div id="logo"><img src="assets/img/logo.png" height="200px" width="150px"></div><div id="cont"><div id="headline"><h1>SINCE SPURS LAST WON A TROPHY</h1></div><div id="labels"><h3>&nbsp &nbsp YEARS &nbsp &nbsp MONTHS &nbsp &nbsp  DAYS &nbsp &nbsp &nbsp HOURS &nbsp  MINUTES &nbsp SECONDS</div><div id="countdown"></div></div></div>
-<div id="left">
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Since left 2 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:250px"
-     data-ad-client="ca-pub-6874699042727125"
-     data-ad-slot="8849636092"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
-<!-- <div id ="twitter">
-<h2>What have you achieved in that time?</h2>
-<h4>Tweet #SinceSpursLastWonATrophy</h4><br>
-
-<a class="twitter-timeline" href="https://twitter.com/search?q=%23SinceSpursLastWonATrophy" data-widget-id="467904174072426496" data-chrome="noborders transparent noscrollbar nofooter" height="550" data-tweet-limit="5">Tweets about "#SinceSpursLastWonATrophy"</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-<div id="sharebottom">
-<span class='st_reddit_large' displayText='Reddit'></span>
-<span class='st_facebook_large' displayText='Facebook'></span>
-<span class='st_twitter_large' displayText='Tweet'></span>
 </div>
-<div id=contact>
-<p>Feel free to contact us at <b>SinceSpursLastWonATrophy@yahoo.com</b></p>
-</div>
-</div> -->
-<div id="right">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Since right -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:160px;height:600px"
-     data-ad-client="ca-pub-6874699042727125"
-     data-ad-slot="5911346097"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
-
-</div>
-
-
-</div>
-<!-- JavaScript includes --><script src="http://code.jquery.com/jquery-1.8.2.min.js"></script><script src="assets/countup/jquery.countup.js"></script><script src="assets/js/script.js"></script></body>
+<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script><script src="assets/countup/jquery.countup.js"></script><script src="assets/js/script.js"></script></body>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
