--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div id="countcont"><div id="logo"><img src="assets/img/logo.png" height="200px" width="150px"></div><div id="cont"><div id="headline"><h1>SINCE SPURS LAST WON A TROPHY</h1></div><div id="labels"><h3>&nbsp &nbsp YEARS &nbsp &nbsp MONTHS &nbsp &nbsp  DAYS &nbsp &nbsp &nbsp HOURS &nbsp  MINUTES &nbsp SECONDS</div><div id="countdown"></div></div></div>
 </div>
 </div>
-<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script><script src="assets/countup/jquery.countup.js"></script><script src="assets/js/script.js"></script></body>
+<script src="https://code.jquery.com/jquery-1.8.2.min.js"></script><script src="assets/countup/jquery.countup.js"></script><script src="assets/js/script.js"></script></body>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
